--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstraptest",
-  "homepage": "https://github.com/Sean-L64/bootstrapTest#readme",
+  "homepage": "https://Sean-L64.github.io/bootstrap-test/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,13 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Sean-L64/bootstrapTest.git"
+    "url": "git+https://github.com/Sean-L64/bootstrap-test.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Sean-L64/bootstrapTest/issues"
+    "url": "https://github.com/Sean-L64/bootstrap-test/issues"
   },
   "devDependencies": {
     "sass": "^1.86.0",
